# Debugninja

./: README.md
CMake/: CMakeLists.txt  CMakeProject1.h
CMake/Header/: Catch2.cpp
CMake/Test files/: Test.cpp  booldecision.cpp
CMake/source files/: TotalBill.cpp  sourcemain.cpp
